# day-guard-ai

./: .env.example  .gitignore  Dockerfile  README.md  README_DEV.md  alembic.ini  dayguard.db  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20250809_000001_init_tasks.py  20250809_000002_add_timestamps_to_tasks.py
app/: main.py
app/api/v1/: router.py  tasks.py
app/core/: config.py  logging.py
app/db/: base.py  session.py
app/db/models/: task.py
app/integrations/: calendar.py  location.py
app/models/: task.py
app/repositories/: base.py  task_repository.py  unit_of_work.py
app/services/: ai.py
app/services/providers/: gemini_provider.py  mistral_provider.py  openai_provider.py
app/workers/: scheduler.py
tests/: test_health.py  test_tasks.py
