[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "day-guard-ai"
version = "0.1.0"
description = "Assistente diário com MCP e IA generativa"
authors = [{ name = "tenebra-dev" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "apscheduler>=3.10",
  "python-dotenv>=1.0",
  "openai>=1.40",
  "google-generativeai>=0.7; platform_system != 'Windows'", # opcional
  "mistralai>=1.1.0",
  "python-telegram-bot>=21",
  "typer>=0.12",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "black>=24.8",
  "mypy>=1.10",
  "types-requests",
  "alembic>=1.13",
]

[tool.setuptools]
include-package-data = true
packages = { find = { include = ["app*"], exclude = ["tests*", "alembic*", "day_guard_ai.egg-info*"] } }

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
